# RapidCopy

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MULTI_PATH_IMPLEMENTATION_PLAN.md  Makefile  PR_DESCRIPTION.md  README.md  docker-compose.qa.yml  docker-compose.yml
doc/: ANALYSIS-CLAUDE-4.md  ANALYSIS-SONNET-3.5.md  DeveloperReadme.md  DockerUpdateGuide.md  MODERNIZATION-PLAN.md  ValidationTestGuide.md
docs/: CI-CD.md  DEPLOYMENT.md  NETWORK_MOUNT_IMPLEMENTATION.md  QA_TESTING_GUIDE.md  TESTING_STATE.md  (+1 more)
src/python/: mkdocs.yml  pyproject.toml  rapidcopy.py  scan_fs.py  scanfs_standalone.py  seedsync.py
src/python/common/: __init__.py  app_process.py  config.py  constants.py  context.py  job_status.py  localization.py  log_manager.py  mount_utils.py  multiprocessing_logger.py  network_mount.py  path_pair.py  persist.py  status.py  transfer_backend.py  validation_models.py
src/python/controller/: __init__.py  auto_queue.py  controller.py  controller_persist.py  model_builder.py
src/python/controller/delete/: delete_process.py
src/python/controller/extract/: dispatch.py  extract.py  extract_process.py
src/python/controller/scan/: __init__.py  active_scanner.py  local_scanner.py  multi_path_active_scanner.py  multi_path_scanner.py  remote_scanner.py  scanner_process.py
src/python/controller/validate/: __init__.py  adaptive_sizing.py  checksum.py  chunk_manager.py  validate_process.py  validation_process.py
src/python/docs/: faq.md  index.md  install.md  usage.md
src/python/lftp/: job_status.py  job_status_parser.py  lftp.py
src/python/model/: diff.py  file.py
src/python/rclone/: __init__.py  job_queue.py  progress_parser.py  rclone.py
src/python/ssh/: sshcp.py
src/python/system/: file.py  scanner.py
src/python/tests/: utils.py
src/python/tests/integration/test_controller/: test_controller.py  test_controller_multi_path.py
src/python/tests/integration/test_controller/test_extract/: test_extract.py
src/python/tests/integration/test_controller/test_extract/fixtures/: file.rar  file.split.part1.rar  file.split.part2.rar
src/python/tests/integration/test_validate/: test_validate_e2e.py
src/python/tests/integration/test_web/: test_web_app.py
src/python/tests/unittests/: test_rapidcopy.py
src/python/tests/unittests/test_common/: test_config.py  test_path_pair.py  test_persist.py
src/python/tests/unittests/test_controller/: test_controller_persist.py  test_disk_space.py  test_model_builder.py  test_model_builder_multipath.py  test_validation_settle_delay.py
src/python/tests/unittests/test_controller/test_scan/: test_multi_path_active_scanner.py  test_remote_scanner.py
src/python/tests/unittests/test_controller/test_validate/: test_config_validation.py  test_controller_validation.py  test_validate_process.py
src/python/tests/unittests/test_lftp/: test_job_status_parser.py
src/python/tests/unittests/test_rclone/: test_job_queue.py  test_job_status.py  test_progress_parser.py  test_rclone.py
src/python/tests/unittests/test_ssh/: test_sshcp.py  test_sshcp_copy_from_remote.py
src/python/tests/unittests/test_system/: test_scanner.py
src/python/tests/unittests/test_web/test_serialize/: test_serialize_model_new_features.py  test_serialize_status_disk_space.py
src/python/web/: utils.py  web_app.py  web_app_builder.py
src/python/web/handler/: auto_queue.py  config.py  controller.py  logs.py  mounts.py  path_pairs.py  stream_log.py  stream_model.py  stream_status.py  update.py  validation.py
src/python/web/serialize/: __init__.py  serialize.py  serialize_log_record.py  serialize_model.py  serialize_status.py  serialize_validation.py
(+168 files in other folders)
