[tool]
[tool.poetry]
name = "seedsync"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
bottle = ">=0.12.25"
mkdocs = "*"
mkdocs-material = "*"
parameterized = "*"
paste = "*"
patool = "*"
pexpect = "*"
pytz = "*"
requests = "*"
tblib = "*"
timeout-decorator = "*"

[tool.poetry.group.dev.dependencies]
pyinstaller = "*"
testfixtures = "*"
webtest = "*"
pytest = "^8.0"
