[tool]
[tool.poetry]
name = "seedsync"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
bottle = ">=0.12.25,<1.0"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
parameterized = "^0.7.4"
paste = "^3.5.0"
patool = "^1.12"
pexpect = "^4.8.0"
pytz = ">=2020.4"
requests = "^2.25.1"
tblib = "^1.7.0"
timeout-decorator = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^4.1"
testfixtures = "^6.17.0"
webtest = "^2.0.35"
pytest = "^8.0"
